Fix quote text overflow

--- a/src/pages/@Insights/style.css
+++ b/src/pages/@Insights/style.css
@@ -12,8 +12,9 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  overflow: auto;
+  overflow: hidden;
   max-width: 450px;
+  height: 100%;
   position: relative;
 }
 
@@ -22,6 +23,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
+  overflow: hidden;
 }
 
 .loading-page {
